# 2048

./: Cargo.toml  README.md
src/: main.rs
src/game/: mod.rs
